<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_run"
        android:icon="@drawable/map"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        android:title="@string/title_run"
        app:cnb_backgroundColor="@color/colorPrimaryDark"/>

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/stats"
        android:title="@string/title_stats"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/colorPrimaryDark"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/information"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        android:title="@string/title_information"
        app:cnb_backgroundColor="@color/colorPrimaryDark"/>

</menu>