<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context="login.Signup2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="frame"
        android:orientation="vertical"
        android:transitionName="transition_signup_btn">

        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:onClick="Signup2Back"
            android:padding="5dp"
            android:src="@drawable/back_arrow"
            android:transitionName="transition_signup_backbtn" />

        <TextView
            android:id="@+id/signup_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:transitionName="transition_signup_titletext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_age"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

        </LinearLayout>


        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:onClick="Signup2Next"
            android:text="@string/next"
            android:textColor="@color/white"
            android:transitionName="transition_signup_nextbtn" />

        <Button
            android:id="@+id/signup_log_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:onClick="Signup2Log"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_signup_logbtn" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>