<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="login.ForgotPassword3"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:onClick="frame">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:onClick="Forgotpass3Back"
            android:padding="5dp"
            android:src="@drawable/back_arrow" />

        <ImageView
            android:layout_width="148dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/new_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/new_credentials_detail"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/new_pass"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/lightwhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_pass"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/lightwhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="ok"
            android:onClick="Forgotpass3Ok"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>